[tool.poetry]
name = "domain92"
version = "1.3.2.1"
description = "A totally rad cli tool to automate freedns link creation"
authors = ["Cbass92 <contact@cbass92.org>"]
readme = "README.md"
repository = "https://github.com/sebastian-92/domain92"

[project]
name = "domain92"
dynamic = [ "version" ]
license = "GPL-3.0-or-later"

include = [
    { path = "domain92/data", format = ["sdist", "wheel"] }
]


[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
requests = "^2.32.3"
art = "^6.4"
freedns-client = "^0.1.3"
pytesseract = "^0.3.13"
lolpython = "^2.2.0"
pysocks = "^1.7.1"
stem = "^1.8.2"
temp-mails = "^2.2.0"
random-header-generator = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
domain92 = "domain92.__main__:init"



# content below this line added by briefcase convert
# This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
[tool.briefcase]
project_name = "domain92"
bundle = "com.cbass92.domain92"
version = "1.1.3"
url = "https://github.com/sebastian-92/domain92"
license.file = "LICENSE"
author = "Cbass92"
author_email = "contact@cbass92.org"

[tool.briefcase.app.domain92]
formal_name = "domain92"
description = "A totally rad cli tool for automating freedns"
long_description = """More details about the app should go here.
"""
sources = [
    "domain92",
]
test_sources = [
    "tests",
]
console_app = true

requires = [
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "art>=6.4",
    "freedns-client>=0.1.3",
    "pytesseract>=0.3.13",
    "lolpython>=2.2.0",
    "pysocks>=1.7.1",
    "stem"
]
test_requires = [
    # Add your cross-platform test requirements here
]

[tool.briefcase.app.domain92.macOS]
universal_build = true
requires = [
    # Add your macOS-specific app requirements here
]

[tool.briefcase.app.domain92.linux]
requires = [
    # Add your Linux-specific app requirements here
]

[tool.briefcase.app.domain92.linux.system.debian]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain92.linux.system.rhel]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain92.linux.system.suse]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain92.linux.system.arch]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.domain92.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.briefcase.app.domain92.windows]
requires = [
    # Add your Windows-specific app requirements here
]

# Mobile deployments
[tool.briefcase.app.domain92.iOS]
requires = [
    # Add your iOS-specific app requirements here
]

[tool.briefcase.app.domain92.android]
requires = [
    # Add your Android-specific app requirements here
]

# Web deployments
[tool.briefcase.app.domain92.web]
requires = [
    # Add your web-specific app requirements here
]

